--- a/caffstore/templates/home.html
+++ b/caffstore/templates/home.html
@@ -1,16 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-    {% for post in posts %}
-        <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author.username }}</a>
-              <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
-            </div>
-            <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-          </div>
-        </article>
-    {% endfor %}
+        {% for item in items %}
+            <article class="media content-section">
+              <img src="{{ url_for('static', filename='CAFF_files/' + item.preview_file )}}" width="500px">
+              <div>
+                  <h2><a class="mr2" href="{{ url_for('caff_details', caff_id=item.id) }}">{{ item.title }}</a></h2>
+                  <p>{{ item.creator_name }}</p>
+                  <p>{{ item.creation_date.strftime('%Y-%m-%d') }}</p>
+                  <p>{{ item.duration }}</p>
+              </div>
+            </article>
+        {% endfor %}
 {% endblock content %}
