--- a/caffstore/templates/details.html
+++ b/caffstore/templates/details.html
@@ -1,16 +1,51 @@
 {% extends "layout.html" %}
 {% block content %}
-            <article class="media content-section">
-              <img src="{{ url_for('static', filename='CAFF_files/' + item.preview_file )}}">
-              <div>
-                  <h2>{{ item.title }}</h2>
-                  <p>{{ item.creator_name }}</p>
-                  <p>{{ item.creation_date.strftime('%Y-%m-%d') }}</p>
-                  <p>{{ item.duration }}</p>
-              </div>
-            </article>
-            {% for comment in item.comments %}
-                 <p>{{ comment.content }}</p>
-            {% endfor %}
+   <div>
+       <img src="{{ url_for('static', filename='CAFF_files/' + item.preview_file )}}" class="img-fluid" alt="CAFF preview">
+   </div>
+   <div>
+     <h2>{{ item.title }}</h2>
+     <p>{{ item.creator_name }}</p>
+     <p>{{ item.creation_date.strftime('%Y-%m-%d') }}</p>
+     <p>{{ item.duration }}</p>
+ </div>
 
+    <div>
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <div class="form-group">
+                    {{ form.content.label(class="form-control-label") }}
+                    {% if form.content.errors %}
+                        {{ form.content(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.content.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.content(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
+
+        <br>
+        {% for comment in item.comments %}
+            <div class="card mb-4">
+              <div class="card-header">
+                  {{ comment.author.username }}
+              </div>
+              <div class="card-body">
+                  <p>{{ comment.content }}</p>
+                  <footer class="blockquote-footer">{{ comment.date_posted.strftime('%Y-%m-%d') }}</footer>
+              </div>
+            </div>
+
+        {% endfor %}
+
+    </div>
 {% endblock content %}
