--- a/caffstore/templates/upload.html
+++ b/caffstore/templates/upload.html
@@ -1,36 +1,36 @@
 {% extends "layout.html" %}
 {% block content %}
-
-<form method="POST" action="" enctype="multipart/form-data">
-{{ form.csrf_token() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Upload CAFF</legend>
-                <div class="form-group">
-                    {{ form.title.label(class="form-control-label") }}
-
-                    {% if form.title.errors %}
-                        {{ form.username(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.title.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
+    <div class="content-section">
+        <form method="POST" action="" enctype="multipart/form-data">
+        {{ form.csrf_token() }}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">Upload CAFF</legend>
+                        <div class="form-group">
+                            {{ form.title.label(class="form-control-label") }}
+                            {% if form.title.errors %}
+                                {{ form.username(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.title.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.title(class="form-control form-control-lg") }}
+                            {% endif %}
                         </div>
-                    {% else %}
-                        {{ form.title(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.picture.label() }}
-                    {{ form.picture(class="form-control-file") }}
-                    {% if form.picture.errors %}
-                        {% for error in form.picture.errors %}
-                            <span class="text-danger">{{ error }}</span></br>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-    </form>
+                        <div class="form-group">
+                            {{ form.picture.label() }}
+                            {{ form.picture(class="form-control-file") }}
+                            {% if form.picture.errors %}
+                                {% for error in form.picture.errors %}
+                                    <span class="text-danger">{{ error }}</span></br>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                    </fieldset>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-outline-info") }}
+                    </div>
+            </form>
+    </div>
 {% endblock content %}
