--- a/caffstore/templates/upload.html
+++ b/caffstore/templates/upload.html
@@ -2,13 +2,13 @@
 {% block content %}
     <div class="content-section">
         <form method="POST" action="" enctype="multipart/form-data">
-        {{ form.csrf_token() }}
+        {{ form.hidden_tag() }}
                     <fieldset class="form-group">
                         <legend class="border-bottom mb-4">Upload CAFF</legend>
                         <div class="form-group">
                             {{ form.title.label(class="form-control-label") }}
                             {% if form.title.errors %}
-                                {{ form.username(class="form-control form-control-lg is-invalid") }}
+                                {{ form.title(class="form-control form-control-lg is-invalid") }}
                                 <div class="invalid-feedback">
                                     {% for error in form.title.errors %}
                                         <span>{{ error }}</span>
@@ -18,6 +18,21 @@
                                 {{ form.title(class="form-control form-control-lg") }}
                             {% endif %}
                         </div>
+
+                        <div class="form-group">
+                            {{ form.price.label(class="form-control-label") }}
+                            {% if form.price.errors %}
+                                {{ form.price(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.price.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.price(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+
                         <div class="form-group">
                             {{ form.picture.label() }}
                             {{ form.picture(class="form-control-file") }}
@@ -28,6 +43,7 @@
                             {% endif %}
                         </div>
                     </fieldset>
+
                     <div class="form-group">
                         {{ form.submit(class="btn btn-outline-info") }}
                     </div>
