--- a/caffstore/templates/home.html
+++ b/caffstore/templates/home.html
@@ -4,7 +4,7 @@
     <div class="card-columns" >
             {% for item in items %}
                 <div class="card">
-                  <img src="{{ url_for('static', filename='CAFF_files/' + item.preview_file )}}" class="card-img-top"
+                  <img src="{{ url_for('static', filename='Preview_files/' + item.preview_file )}}" class="card-img-top"
                     alt="CAFF preview" />
                   <div class="card-body">
                       <h5><a class="card-title" href="{{ url_for('caff_details', caff_id=item.id) }}">{{ item.title }}</a></h5>
