--- a/caffstore/templates/layout.html
+++ b/caffstore/templates/layout.html
@@ -34,8 +34,9 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
-                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                 <a class="nav-item nav-link" href="{{ url_for('edit_userdata', user_id=current_user.id) }}">Edit User</a>
+                <a class="nav-item nav-link" href="{{ url_for('manage_caffs')}}">Manage CAFFs</a>
+                <a class="nav-item nav-link" href="{{ url_for('edit_userdata', user_id=current_user.id) }}">Edit User</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                 {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
