--- a/caffstore/templates/details.html
+++ b/caffstore/templates/details.html
@@ -1,14 +1,39 @@
 {% extends "layout.html" %}
 {% block content %}
-   <div class="text-center mb-3">
+   <div class="text-center mb-4">
        <img src="{{ url_for('static', filename='Preview_files/' + item.preview_file )}}" class="img-fluid rounded" alt="CAFF preview">
    </div>
-   <div>
-     <h2>{{ item.title }}</h2>
-     <p>{{ item.creator_name }}</p>
-     <p>{{ item.creation_date.strftime('%Y-%m-%d') }}</p>
-     <p>{{ item.duration }}</p>
+
+   <div class="mb-3">
+       <h1><b>{{ item.title }}</b></h1>
+       <h3>by: <b>{{ item.uploader.username }}</b></h3>
+   </div>
+
+<div class="card mb-4">
+  <div class="card-header">
+    Details
+  </div>
+  <ul class="list-group list-group-flush">
+      <li class="list-group-item">Creator: <b>{{item.creator_name}}</b></li>
+      <li class="list-group-item">Creation date: <b>{{item.creation_date.strftime('%Y-%m-%d')}}</b></li>
+      <li class="list-group-item">Captions: <b>{{item.captions}}</b></li>
+      <li class="list-group-item">Tags: <b>{{item.tags}}</b></li>
+      <li class="list-group-item">Duration: <b>{{item.duration}}</b></li>
+  </ul>
+</div>
+
+<div class="d-flex justify-content-between ">
+      <div>
+         <h3>Price: <b>{{ item.price }}</b></h3>
+      </div>
+      <div>
+         <button type="button" class="btn btn-primary btn-lg">Buy</button>
+      </div>
  </div>
+
+<div class="mb-4 mt-4">
+    <h1>Comments</h1>
+</div>
 
     <div>
         <form method="POST" action="">
