--- a/caffstore/templates/manage_users.html
+++ b/caffstore/templates/manage_users.html
@@ -21,11 +21,13 @@
       <th scope="row">{{user.id}}</th>
       <td>{{user.username}}</td>
       <td>{{user.email}}</td>
+      <td>
       {% for role in user.roles %}
-        <td>{{role.name}}</td>
+        {{role.name}},
       {% endfor %}
+      </td>
       <td>{{user.balance}}</td>
-        <td>*****</td>
+        <td><a href="{{ url_for('edit_userdata_admin', user_id=user.id) }}" class="btn btn-primary btn-sm" role="button">Edit</a></td>
     </tr>
   {% endfor %}
   </tbody>
