'admin create user' feature implemented

--- a/caffstore/templates/manage_users.html
+++ b/caffstore/templates/manage_users.html
@@ -36,4 +36,6 @@
   </tbody>
 </table>
 
+<a class="btn btn-outline-info" href="{{ url_for('create_user')}}">Create User</a>
+
 {% endblock content %}
