--- a/caffstore/templates/edit_user.html
+++ b/caffstore/templates/edit_user.html
@@ -61,6 +61,7 @@
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
+                <a class="btn btn-danger" href="{{ url_for('delete_user', user_id=current_user.id)}}">Delete Account</a>
             </div>
         </form>
     </div>
