--- a/caffstore/templates/about.html
+++ b/caffstore/templates/about.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
+    <br>
+    <h3>IT Security homework made by the Flying Ducks team</h3>
 {% endblock content %}
