--- a/caffstore/templates/manage_caffs.html
+++ b/caffstore/templates/manage_caffs.html
@@ -27,7 +27,7 @@
         <td>{{caff.price}}</td>
         <td>
             <a href="{{ url_for('edit_caff', caff_id=caff.id) }}" class="btn btn-primary btn-sm" role="button">Edit</a>
-            <a href="{{ url_for('delete_caff', caff_id=caff.id) }}" class="btn btn-primary btn-sm" role="button">Delete</a>
+            <a href="{{ url_for('delete_caff', caff_id=caff.id) }}" class="btn btn-danger btn-sm" role="button">Delete</a>
         </td>
 
     </tr>
