--- a/caffstore/templates/manage_users.html
+++ b/caffstore/templates/manage_users.html
@@ -29,7 +29,7 @@
       <td>{{user.balance}}</td>
         <td>
           <a href="{{ url_for('edit_userdata_admin', user_id=user.id) }}" class="btn btn-primary btn-sm" role="button">Edit</a>
-          <a href="{{ url_for('delete_user', user_id=user.id) }}" class="btn btn-primary btn-sm" role="button">Delete</a>
+          <a href="{{ url_for('delete_user', user_id=user.id) }}" class="btn btn-danger btn-sm" role="button">Delete</a>
         </td>
     </tr>
   {% endfor %}
